# EventBus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conandeps.cmake  conanfile.py  conanfile.txt
include/: EventHandler.h
include/EventBus/: Event.h
src/: Event.h  EventBus.cpp  EventBus.h  EventHandler.cpp  EventHandler.h
test/: EventBusTest.cpp
